fixing some spacing and icon

--- a/src/App.scss
+++ b/src/App.scss
@@ -244,7 +244,7 @@ hr {
 
 .contact-link {
   text-align: center;
-  margin-bottom: 2em;
+  padding-top: 15px;
 }
 
 .contact-link > a {
